--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Bienvenidos a la web de estudio fotografico</h1>
     <h2>esta es la pagina web donde podras ver nuestro trabajo</h2>
+    <h3>Contactanos</h3>
 </body>
 </html>
