--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Estudio Fotografico para dise;adores</title>
+    <title>Estudio Fotografico para dise;adores y Programadores</title>
 </head>
 <body>
     <h1>Bienvenidos a la web de estudio fotografico</h1>
