Se agrego el link de Facebook

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Bienvenidos a la web de estudio fotografico</h1>
     <h2>esta es la pagina web donde podras ver nuestro trabajo</h2>
     <h3>Contactanos</h3>
+    <h4>Entra a nuestro perfil de facebok aqui...</h4>
 </body>
 </html>
